--- a/crates/formula-vba-runtime/Cargo.toml
+++ b/crates/formula-vba-runtime/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1.0"
+chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
 
 [dev-dependencies]
 pretty_assertions = "1.4"
