--- a/crates/formula-model/Cargo.toml
+++ b/crates/formula-model/Cargo.toml
@@ -15,6 +15,7 @@ thiserror = "2.0"
 chrono = "0.4"
 ordered-float = "4"
 uuid = { version = "1", features = ["v4"] }
+unicode-normalization = "0.1"
 
 [dev-dependencies]
 serde_json = "1.0"
