--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -52,6 +52,7 @@ thiserror = "1.0"
 [dev-dependencies]
 cfb = "0.10"
 tempfile = "3.10"
+xlsx-diff = { path = "../../../crates/xlsx-diff" }
 
 [build-dependencies]
 tauri-build = { version = "2.5", optional = true }
