test(sync-server): add JWT/permissions integration coverage
- Add auth-permissions integration tests for JWT docId mismatch, read-only roles, and awareness spoofing

- Extract reusable test helpers (server spawn + sync/wait utilities)

- Run all sync-server *.test.ts files and refactor integration tests to use the helpers

--- a/services/sync-server/package.json
+++ b/services/sync-server/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "test": "node --import tsx --test test/integration.test.ts"
+    "test": "node --import tsx --test test/*.test.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
