fix: make api docker image build from repo root
- Build API from repo root context so shared/dlp-core is available for TypeScript + runtime\n- Preserve repo directory structure in the image to keep relative imports working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
 
   api:
     build:
-      context: ./services/api
+      context: .
+      dockerfile: services/api/Dockerfile
     environment:
       PORT: "3000"
       DATABASE_URL: postgres://postgres:postgres@db:5432/formula
