chore(pnpm): exclude wasm-pack pkg output from workspace

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,4 +2,6 @@ packages:
   - "apps/*"
   - "packages/*"
   - "packages/*/*"
+  # wasm-pack output (generated)
+  - "!packages/engine/pkg"
   - "services/*"
