refactor(spreadsheet-frontend): split a1/cache/grid entrypoints
- Move A1 helpers and EngineCellCache into grid-free modules\n- Add subpath exports (./a1, ./cache, ./grid) so desktop can reuse cache/utils without pulling @formula/grid types\n- Keep root index exporting everything for web

--- a/packages/spreadsheet-frontend/package.json
+++ b/packages/spreadsheet-frontend/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "sideEffects": false,
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./a1": "./src/a1.ts",
+    "./cache": "./src/cache.ts",
+    "./grid": "./src/grid-provider.ts"
   },
   "dependencies": {
     "@formula/engine": "workspace:*",
     "@formula/grid": "workspace:*"
   }
 }
-
