chore(desktop): consume ai-audit via package browser entry
- Add @formula/ai-audit as a workspace dependency for the desktop app
- Replace deep relative imports of ai-audit src/* with @formula/ai-audit/browser
  to ensure webview/Vite builds only traverse browser-safe entrypoints

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -14,6 +14,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@formula/ai-audit": "workspace:*",
     "@formula/ai-completion": "workspace:*",
     "@formula/collab-comments": "workspace:*",
     "@formula/data-io": "workspace:*",
