--- a/services/api/package.json
+++ b/services/api/package.json
@@ -15,11 +15,24 @@
   "dependencies": {
     "@fastify/cookie": "^10.0.1",
     "@fastify/cors": "^10.0.2",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/context-async-hooks": "^2.3.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.209.0",
+    "@opentelemetry/instrumentation": "^0.209.0",
+    "@opentelemetry/instrumentation-fastify": "^0.53.1",
+    "@opentelemetry/instrumentation-http": "^0.209.0",
+    "@opentelemetry/instrumentation-undici": "^0.19.0",
+    "@opentelemetry/resources": "^2.3.0",
+    "@opentelemetry/sdk-trace-base": "^2.3.0",
+    "@opentelemetry/sdk-trace-node": "^2.3.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
     "bcryptjs": "^2.4.3",
     "fastify": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "otplib": "^12.0.1",
     "pg": "^8.12.0",
+    "pino": "^9.5.0",
+    "prom-client": "^15.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -34,4 +47,3 @@
     "ws": "^8.18.0"
   }
 }
-
