feat(formula-xlsb): centralize BIFF12 varints + add property tests
- Add biff12_varint helpers for BIFF12 record id/len read+write
- Refactor Biff12Reader to use shared encoding logic
- Add proptest roundtrips, fixed vectors, and fixture header byte-for-byte reserialization test

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -11,5 +11,6 @@ zip = { version = "0.6", default-features = false, features = ["deflate"] }
 [dev-dependencies]
 assert_cmd = "2.0"
 pretty_assertions = "1.4"
+proptest = "1"
 tempfile = "3.10"
 xlsx-diff = { path = "../xlsx-diff" }
