test(formula-xlsb): validate decoded formulas against calamine fixtures
- Add calamine-based regression test that discovers all XLSB fixtures and
  compares worksheet_formula output to formula-xlsb rgce decoding.
- Normalize formulas for comparison (leading '=', whitespace outside strings,
  case-insensitive outside literals).
- Update simple.xlsb fixture to omit invalid styles.bin so calamine can open it.
- Add calamine 0.26 as a dev-dependency.

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -10,6 +10,7 @@ zip = { version = "0.6", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
+calamine = "0.26"
 pretty_assertions = "1.4"
 proptest = "1"
 tempfile = "3.10"
