feat(scripting): add TypeScript declarations for package entrypoints
- Provide index/node/web .d.ts files for @formula/scripting exports and ScriptRuntime
- Wire types via package.json exports so TS consumers can import @formula/scripting/* cleanly

--- a/packages/scripting/package.json
+++ b/packages/scripting/package.json
@@ -3,11 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "./src/index.js",
+  "types": "./src/index.d.ts",
   "sideEffects": false,
   "exports": {
-    ".": "./src/index.js",
-    "./node": "./src/node.js",
-    "./web": "./src/web.js"
+    ".": {
+      "types": "./src/index.d.ts",
+      "default": "./src/index.js"
+    },
+    "./node": {
+      "types": "./src/node.d.ts",
+      "default": "./src/node.js"
+    },
+    "./web": {
+      "types": "./src/web.d.ts",
+      "default": "./src/web.js"
+    }
   },
   "dependencies": {
     "typescript": "^5.8.2"
