feat(scripting): harden node/web ScriptRuntime via security sandbox
$- Route Node execution through @formula/security sandboxWorker (timeouts, memory hints, cancellation)\n- Provide browser WebWorker runtime with identical RPC protocol + fetch/WebSocket permission gates\n- Expand workbook API (sheets, used range, formulas, formats, batch ops) and add script event hooks\n- Support TS + module-style scripts (export default main) with clear diagnostics\n- Emit structured audit entries per run and add runtime tests

--- a/packages/scripting/package.json
+++ b/packages/scripting/package.json
@@ -20,7 +20,14 @@
       "default": "./src/web.js"
     }
   },
+  "scripts": {
+    "test": "vitest run -c vitest.config.ts"
+  },
   "dependencies": {
+    "@formula/security": "workspace:*",
     "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "vitest": "^3.0.7"
   }
 }
