fix(sql.js): make browser bundlers ignore Node builtins
- Patch sql.js package.json to map fs/path/crypto to false via browser field
- Register patched dependency in pnpm config
- Extend ai-audit bundling test to ensure @formula/ai-audit/sqlite bundles for browser without node: imports

--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "jsdom": "^24.0.0",
     "typescript": "^5.8.2",
     "vitest": "^3.0.7"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "sql.js@1.13.0": "patches/sql.js@1.13.0.patch"
+    }
   }
 }
