--- a/packages/security/package.json
+++ b/packages/security/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "./src/index.js"
+  "main": "./src/index.js",
+  "dependencies": {
+    "@formula/audit-core": "workspace:*"
+  }
 }
