--- a/services/api/package.json
+++ b/services/api/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@formula/audit-core": "workspace:*",
     "@fastify/cookie": "^10.0.1",
     "@fastify/cors": "^10.0.2",
     "@opentelemetry/api": "^1.9.0",
