--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
   "crates/formula-model",
   "crates/formula-storage",
   "crates/formula-vba",
+  "crates/formula-vba-oracle-cli",
   "crates/formula-vba-runtime",
   "crates/formula-xls",
   "crates/formula-xlsb",
