--- a/packages/vba-migrate/package.json
+++ b/packages/vba-migrate/package.json
@@ -2,6 +2,11 @@
   "name": "@formula/vba-migrate",
   "private": true,
   "type": "module",
-  "main": "./src/index.js"
+  "main": "./src/index.js",
+  "bin": {
+    "vba-migrate": "./src/cli.js"
+  },
+  "scripts": {
+    "test": "node --test --test-concurrency=1"
+  }
 }
-
