fix(sync-server): harden Docker build for LevelDB persistence
- Install minimal node-gyp toolchain in build stage (python3/make/g++)
- Switch to npm ci with a committed sync-server package-lock for reproducible installs
- Add y-leveldb as optionalDependency and verify it is requireable during image build
- Create LevelDB data dir + ensure it exists at runtime; run container as non-root
- Add guard against importing workspace-only modules; document docker build/run

--- a/services/sync-server/Dockerfile
+++ b/services/sync-server/Dockerfile
@@ -5,12 +5,27 @@ FROM node:20-slim AS build
 
 WORKDIR /app
 
+# Native deps (node-gyp) for optional LevelDB persistence:
+# y-leveldb -> level -> leveldown (native).
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends \
+    ca-certificates \
+    g++ \
+    make \
+    python3 \
+  && rm -rf /var/lib/apt/lists/*
+
 # Preserve monorepo-ish layout so relative imports from dist/ keep working.
 COPY services/sync-server/package.json ./services/sync-server/package.json
+COPY services/sync-server/package-lock.json ./services/sync-server/package-lock.json
 
 WORKDIR /app/services/sync-server
 
-RUN npm install
+RUN npm ci
+# y-leveldb is an optionalDependency (to keep local dev portable), but the Docker
+# image must include it so the default persistence backend (leveldb) works in
+# production.
+RUN node -e 'require("y-leveldb")'
 
 WORKDIR /app
 
@@ -24,7 +39,12 @@ COPY packages/security/crypto ./packages/security/crypto
 
 WORKDIR /app/services/sync-server
 
+# This image only copies the sync-server sources plus packages/security/crypto.
+# Avoid importing other monorepo packages unless you also copy them here.
+RUN node -e 'const fs=require("fs");const path=require("path");const bad=[];const deny=[/@formula\//,/packages\/security\/(?!crypto(?:\/|$))/];(function walk(d){for(const e of fs.readdirSync(d,{withFileTypes:true})){const p=path.join(d,e.name);if(e.isDirectory())walk(p);else if(e.isFile()&&p.endsWith(".ts")){const t=fs.readFileSync(p,"utf8");if(deny.some(r=>r.test(t)))bad.push(p);}}})("src");if(bad.length){console.error("sync-server Docker build only includes services/sync-server and packages/security/crypto. Offending files:",bad);process.exit(1);}'
+
 RUN npm run build
+RUN npm prune --omit=dev
 
 FROM node:20-slim
 
@@ -34,12 +54,18 @@ ENV NODE_ENV=production
 ENV SYNC_SERVER_HOST=0.0.0.0
 ENV SYNC_SERVER_PORT=1234
 
-COPY --from=build /app/services/sync-server/package.json ./package.json
-COPY --from=build /app/services/sync-server/node_modules ./node_modules
-COPY --from=build /app/services/sync-server/dist ./dist
+COPY --from=build --chown=node:node /app/services/sync-server/package.json ./package.json
+COPY --from=build --chown=node:node /app/services/sync-server/node_modules ./node_modules
+COPY --from=build --chown=node:node /app/services/sync-server/dist ./dist
 
 COPY --from=build /app/packages/security/package.json /app/packages/security/package.json
 COPY --from=build /app/packages/security/crypto /app/packages/security/crypto
+
+# Default `SYNC_SERVER_DATA_DIR` resolves under this workdir.
+RUN mkdir -p /app/services/sync-server/.sync-server-data \
+  && chown -R node:node /app/services/sync-server/.sync-server-data
+
+USER node
 
 EXPOSE 1234
 CMD ["node", "dist/index.js"]
