--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@formula/engine": "workspace:*",
     "@formula/grid": "workspace:*",
+    "@formula/spreadsheet-frontend": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
