feat(api): envelope-encrypt document version blobs w/ KMS + rotation
- Add AES-256-GCM envelope encryption for document_versions.data with per-blob DEKs
  and AAD binding to org/document/version identifiers
- Introduce a pluggable KmsProvider interface with LocalKmsProvider (HKDF-derived KEK)
  and optional AwsKmsProvider
- Extend schema with encrypted envelope columns + kms_key_rotated_at; add key rotation
  script that re-wraps stored DEKs without re-encrypting ciphertext
- Add DB helpers + tests for roundtrip, AAD mismatch, rotation, and mixed
  plaintext/encrypted rollout behavior
- Document configuration and keep API e2e tests stable (use lightweight sync server
  and Node resolution for jsonwebtoken)

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/index.js",
     "migrate": "tsx src/scripts/migrate.ts",
     "retention:sweep": "tsx src/scripts/retention.ts",
+    "keys:rotate": "tsx src/scripts/rotateKeys.ts",
     "test": "vitest run",
     "test:watch": "vitest"
   },
