chore(desktop): build wasm before e2e tests

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -11,6 +11,7 @@
     "pyodide:setup": "node scripts/ensure-pyodide-assets.mjs",
     "test:node": "node --test",
     "test": "vitest run",
+    "pretest:e2e": "pnpm -w build:wasm",
     "test:e2e": "playwright test"
   },
   "dependencies": {
