--- a/services/sync-server/package.json
+++ b/services/sync-server/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "node scripts/node-with-tsx.mjs --watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "test": "node --import tsx --test test/*.test.ts"
+    "test": "node scripts/node-with-tsx.mjs --test test/*.test.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -25,6 +25,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.0",
     "@types/ws": "^8.5.13",
+    "level-mem": "^5.0.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
