--- a/packages/collab/session/package.json
+++ b/packages/collab/session/package.json
@@ -7,7 +7,10 @@
   "types": "src/index.ts",
   "dependencies": {
     "@formula/collab-presence": "workspace:*",
+    "y-websocket": "^2.1.0",
     "yjs": "^13.6.27"
+  },
+  "devDependencies": {
+    "ws": "^8.18.0"
   }
 }
-
