feat(xlsb): preserve implicit intersection via ptg classes
- Decode Ref/Area tokens across R/V/A classes (including *N variants)
- Emit explicit `@` for value-class multi-cell refs (PtgAreaV, PtgArea3dV, PtgAreaNV)
- Encode explicit `@` by emitting value-class reference tokens
- Add handcrafted rgce tests + formula-engine parse/serialize roundtrip

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -17,6 +17,7 @@ formula-biff = { path = "../formula-biff", optional = true }
 [dev-dependencies]
 assert_cmd = "2.0"
 calamine = "0.26"
+formula-engine = { path = "../formula-engine" }
 pretty_assertions = "1.4"
 proptest = "1"
 tempfile = "3.10"
