feat: add BIFF12 rgce encoder for XLSB formula edits
- Add new  crate with BIFF12 rgce encode/decode (subset)
- Encode constants, A1 refs/areas, operators, and common built-in functions
- Provide bidirectional BIFF function ID <-> name table
- Add round-trip tests (text -> rgce -> text)
- Expose encoder from  behind the  feature

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -3,10 +3,16 @@ name = "formula-xlsb"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+# Keep the default reader minimal; enabling `write` pulls in the formula parser +
+# rgce encoder so worksheet patchers can emit BIFF12 formulas.
+write = ["dep:formula-biff"]
+
 [dependencies]
 quick-xml = "0.31"
 thiserror = "1.0"
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
+formula-biff = { path = "../formula-biff", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2.0"
