--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
   "apps/desktop/src-tauri",
+  "crates/formula-biff",
   "crates/formula-columnar",
   "crates/formula-dax",
   "crates/formula-engine",
