feat(corpus): real XLSX round-trip triage via formula-xlsx + xlsx-diff
- Add Rust triage helper to load/save with formula-xlsx, diff with xlsx-diff, and optionally recalc + render-smoke\n- Extend xlsx-diff to diff archives from bytes with ignore-part options\n- Update tools/corpus triage + dashboard + expectations and add schema tests\n- Ensure corpus workflow installs Rust toolchain/cache

--- a/.github/workflows/corpus.yml
+++ b/.github/workflows/corpus.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -49,6 +51,8 @@ jobs:
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
