feat(xlsb): parse rich/phonetic shared strings and preserve SI runs
- Add SharedString model holding RichText runs, opaque run formats, phonetic bytes, and raw BrtSI payload for round-trip preservation
- Parse BrtSI rich text runs (with fallback layouts) and safely capture phonetic tails
- Keep XlsbWorkbook::shared_strings() returning plain concatenated text; expose shared_strings_table() for rich access
- Add rich_shared_strings.xlsb fixture + test asserting run segmentation + format bytes

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 write = ["formula-biff/encode"]
 
 [dependencies]
+formula-model = { path = "../formula-model" }
 quick-xml = "0.31"
 thiserror = "1.0"
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
