--- a/packages/text-layout/package.json
+++ b/packages/text-layout/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "grapheme-splitter": "^1.0.4",
     "harfbuzzjs": "^0.4.15",
+    "linebreak": "^1.1.0",
     "opentype.js": "^1.3.4"
   }
 }
