feat: enable XLSB patching from formula text via formula-biff
- Make  depend on  (no-encode) for built-in function
  id/name mapping, keeping the default reader lightweight
- Extend  decoder to handle  and decode all mapped
  built-in functions
- Add  helpers (feature ) to encode formula text into rgce
- Add round-trip rgce encode/decode tests and a patch_sheet test that updates a
  formula cell from text

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -4,19 +4,20 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-# Keep the default reader minimal; enabling `write` pulls in the formula parser +
-# rgce encoder so worksheet patchers can emit BIFF12 formulas.
-write = ["dep:formula-biff"]
+# Keep the default reader minimal; enabling `write` pulls in the formula parser
+# (via `formula-engine`) so worksheet patchers can emit BIFF12 formulas.
+write = ["formula-biff/encode"]
 
 [dependencies]
 quick-xml = "0.31"
 thiserror = "1.0"
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
-formula-biff = { path = "../formula-biff", optional = true }
+formula-biff = { path = "../formula-biff", default-features = false }
 
 [dev-dependencies]
 assert_cmd = "2.0"
 calamine = "0.26"
+formula-biff = { path = "../formula-biff" }
 formula-engine = { path = "../formula-engine" }
 pretty_assertions = "1.4"
 proptest = "1"
