--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,9 @@ jobs:
       - name: Build desktop (Vite)
         run: pnpm build:desktop
 
+      - name: Smoke-check WASM assets
+        run: pnpm smoke:wasm
+
   node-tests:
     name: Node tests
     runs-on: ubuntu-latest
