--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,3 +139,34 @@ jobs:
           done
 
           curl -fsS http://127.0.0.1:12345/healthz
+
+      - name: Smoke test container (file + encryption)
+        run: |
+          set -euo pipefail
+
+          # KeyRing JSON with a deterministic all-zero 32-byte key (sufficient for CI smoke testing).
+          KEYRING_JSON='{"currentVersion":1,"keys":{"1":"AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA="}}'
+
+          docker run -d \
+            -p 12346:1234 \
+            -e SYNC_SERVER_AUTH_TOKEN=ci-token \
+            -e SYNC_SERVER_PERSISTENCE_BACKEND=file \
+            -e SYNC_SERVER_PERSISTENCE_ENCRYPTION=keyring \
+            -e SYNC_SERVER_ENCRYPTION_KEYRING_JSON="$KEYRING_JSON" \
+            --name sync-server \
+            formula-sync-server:ci
+
+          cleanup() {
+            docker logs sync-server --tail 200 || true
+            docker rm -f sync-server || true
+          }
+          trap cleanup EXIT
+
+          for i in {1..30}; do
+            if curl -fsS http://127.0.0.1:12346/healthz > /dev/null; then
+              break
+            fi
+            sleep 1
+          done
+
+          curl -fsS http://127.0.0.1:12346/healthz
