feat(xlsx): parse pivot cache <d> datetime values
- Parse pivotCacheRecords <d v=.../> into PivotCacheValue::DateTime(String) (no numeric assumptions)
- Add pivot_cache_datetime_to_naive_date helper for timeline filtering
- Add fixture + tests covering ISO-8601 datetime records

--- a/crates/formula-xlsx/Cargo.toml
+++ b/crates/formula-xlsx/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT OR Apache-2.0"
 description = "XLSX/XLSM import/export and package preservation utilities for Formula."
 
 [dependencies]
+chrono = { version = "0.4", default-features = false, features = ["std"] }
 formula-engine = { path = "../formula-engine" }
 formula-model = { path = "../formula-model" }
 formula-vba = { path = "../formula-vba" }
