feat(xlsb): parse styles.bin and surface date formats
- Parse xl/styles.bin to map cell style (XF) indices to numFmt codes and date/time flags\n- Expose XlsbWorkbook::styles() for resolving style_id -> StyleInfo\n- Desktop XLSB import keeps raw numeric values but uses number formats for display\n- Add a date-formatted XLSB fixture + tests\n- Fix XLSX workbook metadata destructuring after API change

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ calamine = "0.26"
 directories = "5.0"
 formula-columnar = { path = "../../../crates/formula-columnar" }
 formula-engine = { path = "../../../crates/formula-engine" }
+formula-format = { path = "../../../crates/formula-format" }
 formula-model = { path = "../../../crates/formula-model" }
 formula-vba = { path = "../../../crates/formula-vba" }
 formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
