--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 write = ["formula-biff/encode"]
 
 [dependencies]
+formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
 quick-xml = "0.31"
 thiserror = "1.0"
