feat(formula-xlsb): parse workbook properties from workbook.bin
- Fix BIFF12 record id varint decoding and update record constants
- Parse BrtWbProp (date1904) and BrtCalcProp (calcMode/fullCalcOnLoad)
- Capture sheet visibility from BrtBundleSh flags and expose via XlsbWorkbook
- Add unit tests + a 1904-date fixture verifying serial date interpretation

--- a/crates/formula-xlsb/Cargo.toml
+++ b/crates/formula-xlsb/Cargo.toml
@@ -20,6 +20,7 @@ assert_cmd = "2.0"
 calamine = "0.26"
 formula-biff = { path = "../formula-biff" }
 formula-engine = { path = "../formula-engine" }
+formula-format = { path = "../formula-format" }
 pretty_assertions = "1.4"
 proptest = "1"
 tempfile = "3.10"
