--- a/crates/formula-xlsx/Cargo.toml
+++ b/crates/formula-xlsx/Cargo.toml
@@ -12,6 +12,7 @@ formula-vba = { path = "../formula-vba" }
 quick-xml = { version = "0.37", features = ["serialize"] }
 roxmltree = "0.20"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "1"
 zip = { version = "2.1", default-features = false, features = ["deflate"] }
 
