chore(sync): mark legacy sync service deprecated
Add a deprecation description to services/sync so it's clear the local stack uses services/sync-server.

--- a/services/sync/package.json
+++ b/services/sync/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@formula/sync",
+  "description": "DEPRECATED: legacy placeholder sync gateway. Use @formula/sync-server (y-websocket) instead.",
   "version": "0.1.0",
   "private": true,
   "type": "commonjs",
