fix(sync-server): restore docker build with crypto KeyRing types
- Include KeyRing algorithm field when decrypting encrypted file records
- Validate encryptBytes() algorithm matches expected aes-256-gcm
- Add build arg to force native deps to build from source in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build sync-server image
-        run: docker build -f services/sync-server/Dockerfile . -t formula-sync-server:ci
+        run: docker build --build-arg npm_config_build_from_source=true -f services/sync-server/Dockerfile . -t formula-sync-server:ci
 
       - name: Smoke test container
         run: |
